--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
                     <br>
                     <span>SOFT SKILLS</span>
                 </h2>
-                <p>Chuyên cung cấp các món ăn đảm bảo dinh dưỡng
-                    hợp vệ sinh đến người dùng,phục vụ người dùng 1 cái
-                    hoàn hảo nhất</p>
+                <p>Vì tương lai giới trẻ</p>
                 <button>Mua ngay</button>
             </div>
-            <div class="box-right">
+            <!-- <div class="box-right">
                 <img src="2.jpg" alt="", style="height: 300px;">
                 <img src="3.jpg" alt="", style="height: 300px;">
                 <img src="4.jpg" alt="", style="height: 300px;">
-            </div>
+            </div> -->
             <div class="to-bottom">
                 <a href="">
                     <img src="assets/to_bottom.png" alt="">
@@ -86,7 +84,7 @@
                         </span>
                     </div>
 
-                    <div class="name">Món Ăn 1</div>
+                    <div class="name">Hoạt động 1</div>
                     <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
@@ -112,7 +110,7 @@
                         </span>
                     </div>
 
-                    <div class="name">Món Ăn 1</div>
+                    <div class="name">Hoạt động 1</div>
                     <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
@@ -138,7 +136,7 @@
                         </span>
                     </div>
 
-                    <div class="name">Món Ăn 1</div>
+                    <div class="name">Hoạt động 1</div>
                     <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
@@ -162,7 +160,7 @@
                         </span>
                     </div>
 
-                    <div class="name">Món Ăn 1</div>
+                    <div class="name">Hoạt động 1</div>
                     <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
@@ -187,7 +185,7 @@
                         </span>
                     </div>
 
-                    <div class="name">Món Ăn 1</div>
+                    <div class="name">Hoạt động 1</div>
                     <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
@@ -212,7 +210,7 @@
                         </span>
                     </div>
 
-                    <div class="name">Món Ăn 1</div>
+                    <div class="name">Hoạt động 1</div>
                     <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
