--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
         <div id="banner">
             <div class="box-left">
                 <h2>
-                    <span>VNV EDUCATION</span>
-                    <br>
-                    <span>SOFT SKILLS</span>
+                    <span>VNV EDUCATION - SOFT SKILLS</span>
                 </h2>
-                <p>Vì tương lai giới trẻ</p>
-                <button>Mua ngay</button>
+                <p>Vì tương lai người trẻ</p>
+                <button>Tham gia ngay</button>
             </div>
             <!-- <div class="box-right">
                 <img src="2.jpg" alt="", style="height: 300px;">
@@ -85,7 +83,7 @@
                     </div>
 
                     <div class="name">Hoạt động 1</div>
-                    <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
+                    <div class="desc">Mô Tả Ngắn Cho Hoạt Động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
 
@@ -111,7 +109,7 @@
                     </div>
 
                     <div class="name">Hoạt động 1</div>
-                    <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
+                    <div class="desc">Mô Tả Ngắn Cho Hoạt Động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
 
@@ -137,7 +135,7 @@
                     </div>
 
                     <div class="name">Hoạt động 1</div>
-                    <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
+                    <div class="desc">Mô Tả Ngắn Cho Hoạt Động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
                 <div class="item">
@@ -161,7 +159,7 @@
                     </div>
 
                     <div class="name">Hoạt động 1</div>
-                    <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
+                    <div class="desc">Mô Tả Ngắn Cho Hoạt Động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
 
@@ -186,7 +184,7 @@
                     </div>
 
                     <div class="name">Hoạt động 1</div>
-                    <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
+                    <div class="desc">Mô Tả Ngắn Cho Hoạt Động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
 
@@ -211,7 +209,7 @@
                     </div>
 
                     <div class="name">Hoạt động 1</div>
-                    <div class="desc">Mô Tả Ngắn Cho Hoạt động</div>
+                    <div class="desc">Mô Tả Ngắn Cho Hoạt Động</div>
                     <div class="price">500.000 VNĐ</div>
                 </div>
             </ul>
