--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div id="wp-products">
-            <h2>Hoạt động CỦA CHÚNG TÔI</h2>
+            <h2>HOẠT ĐỘNG CỦA CHÚNG TÔI</h2>
             <ul id="list-products">
                 <div class="item">
                     <img src="2.jpg" alt="", style="height: 300px;">
